# miracle_head

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  config.json  pyproject.toml
backend/: config.py  counseling.py  debate.py  gemini.py  llm.py  local_llm.py  main.py  models.py  openrouter.py  storage.py
frontend/: index.html
frontend/public/: miracle-head-redesign.html  miracle-redesign-v2.html
frontend/src/: App.css  App.jsx  LanguageContext.jsx  api.js  i18n.js  index.css
frontend/src/components/: CounselingChat.css  CounselingChat.jsx  DebateSetup.css  DebateSetup.jsx  DebateView.css  DebateView.jsx  JudgeReport.css  JudgeReport.jsx  LandingPage.css  LandingPage.jsx  Sidebar.css  Sidebar.jsx
